did babel and webpack

--- a/app/index.html
+++ b/app/index.html
@@ -175,7 +175,7 @@
             </div>
 
         </footer>
-        <script src="assets/scripts/app.js"></script>
+        <script src="temp/scripts/app.js"></script>
 </body>
 
 </html>
